--- a/SmartShop/app/src/main/res/layout/activity_login.xml
+++ b/SmartShop/app/src/main/res/layout/activity_login.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <LinearLayout
+            android:layout_marginTop="50dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
