--- a/SmartShop/app/src/main/res/layout/activity_main.xml
+++ b/SmartShop/app/src/main/res/layout/activity_main.xml
@@ -1,230 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/MyDrawer"
     tools:context=".MainActivity">
 
-
-    <FrameLayout
-        android:id="@+id/content_frame"
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-        <RelativeLayout
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="120dp"
-            android:background="#000">
-            <TextView
-                android:id="@+id/your_orders"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="Your Orders"
-                android:textColor="#fff"
-                android:textSize="40sp"
-                android:gravity="center" />
-        </RelativeLayout>
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_marginTop="120dp"
-            android:layout_height="match_parent">
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay">
 
-            <LinearLayout
-                android:id="@+id/orderList"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:visibility="visible">
+        </android.support.v7.widget.Toolbar>
+
+    </android.support.design.widget.AppBarLayout>
+
+    <include layout="@layout/content_homepage" />
 
 
-
-                <RelativeLayout
-                    android:id="@+id/no_order"
-                    android:layout_width="match_parent"
-                    android:layout_height="120dp"
-                    android:background="#F5C27A"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="10dp"
-                    android:visibility="gone">
-                    <TextView
-                        android:id="@+id/no_order_msg"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_alignParentLeft="true"
-                        android:layout_marginLeft="40dp"
-                        android:textSize="30sp"
-                        android:gravity="center"/>
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:id="@+id/order1"
-                    android:layout_width="match_parent"
-                    android:layout_height="120dp"
-                    android:background="#F5C27A"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="10dp">
-                    <TextView
-                        android:id="@+id/Date1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:text="hello"
-                        android:layout_alignParentLeft="true"
-                        android:layout_marginLeft="40dp"
-                        android:textSize="30sp"
-                        android:gravity="center"/>
-                    <TextView
-                        android:id="@+id/Amount1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:text="There"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginRight="40dp"
-                        android:textSize="30sp"
-                        android:gravity="center"/>
-
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:id="@+id/order2"
-                    android:layout_width="match_parent"
-                    android:layout_height="120dp"
-                    android:background="#F5C27A"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="10dp">
-                    <TextView
-                        android:id="@+id/Date2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:text="hello"
-                        android:layout_alignParentLeft="true"
-                        android:layout_marginLeft="40dp"
-                        android:textSize="30sp"
-                        android:gravity="center"/>
-                    <TextView
-                        android:id="@+id/Amount2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:text="There"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginRight="40dp"
-                        android:textSize="30sp"
-                        android:gravity="center"/>
-
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:id="@+id/order3"
-                    android:layout_width="match_parent"
-                    android:layout_height="120dp"
-                    android:background="#F5C27A"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="10dp">
-                    <TextView
-                        android:id="@+id/Date3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:text="hello"
-                        android:layout_alignParentLeft="true"
-                        android:layout_marginLeft="40dp"
-                        android:textSize="30sp"
-                        android:gravity="center"/>
-                    <TextView
-                        android:id="@+id/Amount3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:text="There"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginRight="40dp"
-                        android:textSize="30sp"
-                        android:gravity="center"/>
-
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:id="@+id/order4"
-                    android:layout_width="match_parent"
-                    android:layout_height="120dp"
-                    android:background="#F5C27A"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="10dp">
-                    <TextView
-                        android:id="@+id/Date4"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:text="hello"
-                        android:layout_alignParentLeft="true"
-                        android:layout_marginLeft="40dp"
-                        android:textSize="30sp"
-                        android:gravity="center"/>
-                    <TextView
-                        android:id="@+id/Amount4"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:text="There"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginRight="40dp"
-                        android:textSize="30sp"
-                        android:gravity="center"/>
-
-                </RelativeLayout>
-                <RelativeLayout
-                    android:id="@+id/order5"
-                    android:layout_width="match_parent"
-                    android:layout_height="120dp"
-                    android:background="#F5C27A"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="10dp">
-                    <TextView
-                        android:id="@+id/Date5"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:text="hello"
-                        android:layout_alignParentLeft="true"
-                        android:layout_marginLeft="40dp"
-                        android:textSize="30sp"
-                        android:gravity="center"/>
-                    <TextView
-                        android:id="@+id/Amount5"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:text="There"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginRight="40dp"
-                        android:textSize="30sp"
-                        android:gravity="center"/>
-
-                </RelativeLayout>
-
-            </LinearLayout>
-
-        </ScrollView>
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end|bottom"
-            android:src="@drawable/ic_add_black_24dp"
-            android:layout_margin="16dp" />
-    </FrameLayout>
-
-
-    <android.support.design.widget.NavigationView
-        android:id="@+id/my_navigation_view"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:background="#BEEE79"
-        app:itemTextColor="#000"
-        app:itemIconTint="#000"
-        app:menu="@menu/my_menu"
-        android:layout_gravity="start"
-        app:headerLayout="@layout/my_header"
-        >
-
-
-    </android.support.design.widget.NavigationView>
-
-
-</android.support.v4.widget.DrawerLayout>
+</android.support.design.widget.CoordinatorLayout>
