--- a/SmartShop/app/src/main/res/values/styles.xml
+++ b/SmartShop/app/src/main/res/values/styles.xml
@@ -22,7 +22,9 @@
     <style name="AppTheme.RoundedCornerMaterialButton2" parent="Widget.AppCompat.Button.Colored">
         <item name="android:background">@drawable/sign_up_button</item>
     </style>
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
     <style name="AppTheme.RoundedCornerMaterialButton3" parent="Widget.AppCompat.Button.Colored">
         <item name="android:background">@drawable/new_account</item>
     </style>
